[project]
name = "wslink"
version = "2.5.0"
authors = [
{ name = "Aron Helser", email = "Aron.helser@kitware.com" },
{ name = "Scott Wittenburg", email = "scott.wittenburg@kitware.com" },
{ name = "Alessandro Genova", email = "alessandro.genova@kitware.com" },
{ name = "Sebastien Jourdain", email = "sebastien.jourdain@kitware.com" },
]
description = "Python/JavaScript library for communicating over WebSocket"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp<4",
    "msgpack>=1,<2",
]

[project.optional-dependencies]
ssl = [
    "cryptography",
]
build = ["uv ~= 0.10.7"]

[dependency-groups]
test = [
  "pytest >=6",
  "pytest-asyncio",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-asyncio",
  "pytest-cov >=3",
  "pre-commit",
  "ruff",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "/src/wslink/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wslink"]

[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
isort.required-imports = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "PT", "RUF059", "PLC0415"]
"examples/**" = ["T20"]
"src/wslink/launcher.py" = ["T20"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/wslink/__init__.py:__version__",
    "js-lib/package.json:version",
]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
